<resources>
    <string name="app_name">WatchDL</string>
    <string name="add_stop">Add stop</string>
    <string name="your_busstops">Your busstops</string>
    <string name="separator">-</string>
    <string name="enter_stop_id">Enter stop id</string>
    <string name="add_bus">Add bus</string>
    <string name="enter_busnumber">Enter busnumber</string>
    <string name="remove_stop">Remove stop</string>
    <string name="disable_all">Disable all</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="send_to_watch">Send to watch</string>
    <string name="go_to_register">Go to register</string>
    <string name="auto_refresh_rate">Auto refresh rate (in seconds)</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string-array name="refresh_rates">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>Never</item>
    </string-array>
</resources>