<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textFontWeight="700"
        android:layout_marginBottom="10dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"

        app:layout_constraintTop_toBottomOf="@id/pageTitle"
        app:layout_constraintStart_toStartOf="@id/emailInput"
    />
    <EditText
        android:hint="@string/enter_email"
        android:autofillHints=""
        android:id="@+id/emailInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:outlineProvider="bounds"

        app:layout_constraintTop_toBottomOf="@id/labelEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"

        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="@id/passwordInput"
    />
    <EditText
        android:hint="@string/enter_password"
        android:autofillHints=""
        android:id="@+id/passwordInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:outlineProvider="bounds"

        app:layout_constraintTop_toBottomOf="@id/labelPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonChangePage"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"

        android:text="@string/go_to_register"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:backgroundTint="@color/light_blue"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonEnter"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEnter"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"

        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:backgroundTint="@color/dark_blue"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonChangePage"
        />

</androidx.constraintlayout.widget.ConstraintLayout>