<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.example.watchdl.customLayouts.CustomHeaderLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:titleText="@string/app_name"
        android:translationZ="3dp"
    />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_busstops"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textFontWeight="700"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="110dp"

        app:layout_constraintTop_toBottomOf="@id/pageTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:keyboardNavigationCluster="false"

        tools:listitem="@layout/stop_item"
    />

    <EditText
        android:id="@+id/stopInput"
        android:hint="@string/enter_stop_id"
        android:autofillHints=""
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:outlineProvider="bounds"

        app:layout_constraintBottom_toTopOf="@id/buttonAddStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddStop"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"

        android:text="@string/add_stop"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:backgroundTint="@color/light_blue"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>