<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.example.watchdl.customLayouts.CustomHeaderLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:titleText="@string/app_name"
        android:translationZ="3dp"
    />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textFontWeight="700"
        android:layout_marginTop="60dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
        android:id="@+id/labelAutoRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_refresh_rate"
        android:textColor="@color/black"

        app:layout_constraintTop_toBottomOf="@id/pageTitle"
        app:layout_constraintEnd_toStartOf="@id/spinnerAutoRefresh"
        app:layout_constraintStart_toStartOf="parent"
    />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerAutoRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/pageTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelAutoRefresh"
    />




</androidx.constraintlayout.widget.ConstraintLayout>