<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/light_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    >
        <Button
            android:id="@+id/buttonMenu"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:contentDescription=""

            android:layout_marginStart="10dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            app:icon="@android:drawable/ic_menu_sort_by_size"
            app:iconTint="@color/white"
            app:iconSize="50dp"
            android:backgroundTint="@color/light_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginStart="10dp"
            android:textSize="32sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonMenu"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    Menu -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu"
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        tools:visibility="invisible"
    >

        <TextView
            android:id="@+id/menutitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"

            android:text="@string/menu"
            android:textSize="30sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        />
        <Button
            android:id="@+id/buttonHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"

            android:text="@string/home"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:backgroundTint="@color/grey"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menutitle"
        />
        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"

            android:text="@string/settings"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:backgroundTint="@color/grey"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonHome"
        />
        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"

            android:text="@string/logout"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:backgroundTint="@color/grey"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonSettings"
        />
        <Button
            android:id="@+id/buttonSaveToWatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"

            android:text="@string/send_to_watch"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:backgroundTint="@color/grey"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLogout"
        />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--Content-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_grey"

        android:layout_marginStart="230dp"
        android:visibility="invisible"
        tools:visibility="visible"
    />


</androidx.constraintlayout.widget.ConstraintLayout>